# rdbiosonics

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  conf.py  conversion.md  echogram.md  index.md  installation.md  quickstart.md  requirements.txt
examples/: plot_echogram.py
matlab/: rddtx.m
src/rdbiosonics/: __init__.py  convert.py  rddtx.py
tests/: test_convert.py  test_rddtx.py
tests/data/: sample.dt4
